# SteinerTree_IE

./: README.md  pyproject.toml
src/steinertree_ie/: convolution_solvers.py  graph_classes.py  simplified.py  steiner_weight.py
src/vertex_example_setups/: test_setups.py
tests/steiner_weight_tests/: fft_conv1.py  regular_conv1.py  test1_steiner_weight.py
